typescript/checker/tests/conformance/es6/Symbols/symbolDeclarationEmit7.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            42,
        ),
        hi: BytePos(
            45,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolDeclarationEmit7.ts:3:5
  |
3 | var obj: {
  |     ^^^

